Fix text alignment

--- a/src/templates/details.scss
+++ b/src/templates/details.scss
@@ -93,4 +93,5 @@
 .text {
   font-size: 18px;
   line-height: 24px;
+  text-align: left;
 }
